# OrderBook-rs

./: .full_engine_diff.patch  .gitignore  BENCH.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl
.github/workflows/: build.yml  code_coverage.yml  format_check.yml  lint.yml  semver.yml  tests.yml
benches/: mod.rs  serialization.rs
benches/concurrent/: contention.rs  register.rs
benches/order_book/: add_only_hdr.rs  add_orders.rs  aggressive_walk_hdr.rs  alloc_count.rs  cancel_only_hdr.rs  hdr_common.rs  mass_cancel.rs  mass_cancel_burst_hdr.rs  match_orders.rs  matching.rs  mixed_70_20_10_hdr.rs  mixed_operations.rs  mod.rs  notional_walk_hdr.rs  replay.rs  snapshot.rs  stp_sweep_hdr.rs  thin_book_sweep_hdr.rs  update_orders.rs
benches/simple/: basic.rs
doc/: wire-protocol.md
examples/: Cargo.toml
src/: lib.rs  prelude.rs
src/orderbook/: book.rs  book_change_event.rs  cache.rs  clock.rs  error.rs  fees.rs  iterators.rs  manager.rs  market_impact.rs  mass_cancel.rs  matching.rs  metrics.rs  mod.rs  modifications.rs  nats.rs  nats_book_change.rs  operations.rs  order_state.rs  pool.rs  private.rs  reject_reason.rs  repricing.rs  risk.rs  serialization.rs  snapshot.rs  stp.rs  trade.rs
src/orderbook/implied_volatility/: error.rs  integration.rs  solver.rs
src/orderbook/sequencer/: error.rs  file_journal.rs  in_memory_journal.rs  journal.rs  mod.rs  replay.rs  types.rs
src/orderbook/tests/: book.rs  depth_analysis.rs  enriched_snapshot_tests.rs  iterator_tests.rs  market_impact_tests.rs  market_metrics.rs  matching.rs  mod.rs  modifications.rs  operations.rs  order.rs  order_placement_tests.rs  repricing.rs  serialize_tests.rs  snapshot.rs  statistics_tests.rs  stp.rs  test_helpers.rs
src/utils/: counting_allocator.rs  mod.rs
src/wire/: error.rs  framing.rs  mod.rs
src/wire/inbound/: cancel.rs  cancel_replace.rs  mass_cancel.rs  mod.rs  new_order.rs
src/wire/outbound/: book_update.rs  exec_report.rs  mod.rs  trade_print.rs
tests/: alloc_budget.rs  fee_tests.rs
tests/metrics/: metrics_tests.rs  mod.rs
tests/unit/: atomic_postonly_fok_tests.rs  book_coverage_tests.rs  book_manager_cross_cancel_tests.rs  clock_determinism_tests.rs  engine_seq_monotonic_tests.rs  evict_expired_tests.rs  filejournal_edge_case_tests.rs  implied_volatility_tests.rs  integration_workflow_tests.rs  kill_switch_tests.rs  manager_coverage_tests.rs  market_order_by_amount_tests.rs  mass_cancel_determinism_tests.rs  mass_cancel_tests.rs  matching_coverage_tests.rs  matching_coverage_tests_extended.rs  metrics_tests.rs  mod.rs  modifications_coverage_tests.rs  modify_atomic_tests.rs  mutation_failure_atomicity_tests.rs  operations_coverage_tests.rs  operations_coverage_tests_extended.rs  private_coverage_tests.rs  props_quantity_update_priority.rs  reject_reason_tests.rs  replay_config_tests.rs  replay_coverage_tests.rs  replay_determinism.rs  repricing_determinism_tests.rs  restore_user_orders_determinism_tests.rs  risk_layer_tests.rs  snapshot_restore_tests.rs  special_order_restore_tests.rs  two_tranche_conservation_tests.rs  validation_tests.rs
tests/unit/common/: mod.rs  strategies.rs
