[package]
name = "orderbook-rs"
version = "0.7.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "A high-performance, lock-free price level implementation for limit order books in Rust. This library provides the building blocks for creating efficient trading systems with support for multiple order types and concurrent access patterns."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/OrderBook-rs"
homepage = "https://github.com/joaquinbejar/OrderBook-rs"
keywords = ["finance", "orderbook", "trading"]
categories = ["finance", "data-structures"]
autobenches = false


include = [
    "benches/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*.png",
    "Docker/**/*.Dockerfile",
    "Docker/**/*.yml",
]

[dependencies]
tracing = { workspace = true }
uuid = { workspace = true }
pricelevel = { workspace = true }
dashmap = { workspace = true }
crossbeam-skiplist = { workspace = true }
crossbeam = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time"] }
bitflags = { workspace = true }
thiserror = { workspace = true }
either = { workspace = true }
async-nats = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
crc32fast = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }

[features]
default = []
special_orders = []
nats = ["dep:async-nats", "dep:bytes"]
bincode = ["dep:bincode"]
journal = ["dep:crc32fast", "dep:memmap2"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
proptest = "1.7"
hdrhistogram = "^7"

[[bench]]
name = "benches"
path = "benches/mod.rs"
harness = false

[[bench]]
name = "add_only_hdr"
path = "benches/order_book/add_only_hdr.rs"
harness = false

[[bench]]
name = "cancel_only_hdr"
path = "benches/order_book/cancel_only_hdr.rs"
harness = false

[[bench]]
name = "aggressive_walk_hdr"
path = "benches/order_book/aggressive_walk_hdr.rs"
harness = false

[[bench]]
name = "mixed_70_20_10_hdr"
path = "benches/order_book/mixed_70_20_10_hdr.rs"
harness = false

[[bench]]
name = "thin_book_sweep_hdr"
path = "benches/order_book/thin_book_sweep_hdr.rs"
harness = false

[[bench]]
name = "mass_cancel_burst_hdr"
path = "benches/order_book/mass_cancel_burst_hdr.rs"
harness = false

[[test]]
name = "tests"
path = "tests/unit/mod.rs"


[lib]
name = "orderbook_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "examples"
]

[workspace.dependencies]
orderbook-rs = { path = "." }
pricelevel = "0.7"
tracing = "0.1"
uuid = { version = "1.23", features = ["v4", "v5", "serde"] }
dashmap = "6.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11"
tokio = { version = "1.52", features = ["sync", "rt", "time"] }
crossbeam-skiplist = "0.1"
crossbeam = "0.8"
bitflags = { version = "2.11", features = ["serde"] }
thiserror = "2"
either = "1.15"
tracing-subscriber = "0.3"
async-nats = "0.47"
bytes = "1"
bincode = { version = "2.0", features = ["serde"] }
crc32fast = "1"
memmap2 = "0.9"
